# ComputerGraphicsProj

./: CMakeLists.txt  vertex.h
Header Files/: EBO.h  VAO.h  VBO.h  bezierCurve.h  bezierCurvesPath.h  button.h  camera.h  enumCameraMovement.h  light.h  mesh.h  model.h  modelLoader.h  railway.h  shaderClass.h  texture.h  train.h  vertex.h
Resource Files/models/: 3d-model.mtl  trilho.mtl
Resource Files/shaders/: area.frag  area.vert  button.frag  button.vert  chromakeying.frag  convolution.frag  cube.frag  curve.frag  picking.frag  picking.vert  test.frag  test.vert
Source Files/: EBO.cpp  VAO.cpp  VBO.cpp  altmain working  bezierCurve.cpp  bezierCurvesPath.cpp  button.cpp  camera.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  railway.cpp  shaderClass.cpp  stb.cpp  texture.cpp  tiny_obj_loader.cpp  train.cpp
lib/: glfw3.lib
